--- a/package.json
+++ b/package.json
@@ -62,31 +62,12 @@
       "main.prod.js.map",
       "package.json"
     ],
-    "dmg": {
-      "contents": [
-        {
-          "x": 130,
-          "y": 220
-        },
-        {
-          "x": 410,
-          "y": 220,
-          "type": "link",
-          "path": "/Applications"
-        }
-      ]
-    },
-    "win": {
-      "target": [
-        "nsis",
-        "msi"
-      ]
-    },
     "linux": {
       "target": [
-        "deb",
-        "rpm",
-        "AppImage"
+        {
+          "target": "AppImage",
+          "arch": "armv7l"
+        }
       ],
       "category": "Development"
     },
